src/test/ui/svh/svh-change-lit.stderr
error[E0460]: found possibly newer version of crate `a` which `b` depends on
  --> $DIR/svh-change-lit.rs:10:1
   |
LL | extern crate b; //~ ERROR: found possibly newer version of crate `a` which `b` depends on
   | ^^^^^^^^^^^^^^^
   |
   = note: perhaps that crate needs to be recompiled?
   = note: the following crate versions were found:
           crate `a`: $PATH_a
           crate `b`: $PATH_b

error: aborting due to previous error

For more information about this error, try `rustc --explain E0460`.
